# osmtools

./: .gitattributes  .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: .gitignore  bruegge.osm.pbf
src/: boundary.rs  extractor.rs  lib.rs  main.rs
src/pbfextractor/: metrics.rs  mod.rs  node_pbf.rs  pbf.rs  units.rs
src/utils/: download.rs  mod.rs  nearest_node.rs  polars_macro.rs  sources.rs
test/: .gitignore  bruegge_poitest_walking_nodes.parquet
