[package]
name = "osmtools"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
flate2 = "1.0.35"
geo = "0.29.2"
geo-types = "0.7.14"
h3o = "0.7.1"
kiddo = "5.0.3"
log = "0.4.25"
osmpbfreader = "0.16.1"
petgraph = "0.6.5"
polars = { version = "0.46", features = ["dtype-struct"] }
polars-io = { version = "0.46", features = ["parquet"] }
proj = "0.27.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"]}
serde = "1.0.215"
smartstring = "1.0.1"
