[package]
name = "osmtools"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
geo = "0.31"
geo-types = "0.7.17"
kiddo = "5.2.2"
log = "0.4.28"
osmpbfreader = "0.19"
polars = { version = "0.50", features = ["dtype-struct", "lazy"] }
polars-io = { version = "0.50", features = ["parquet"] }
proj4rs = { version = "0.1.8", features = ["crs-definitions", "geo-types"] }
reqwest = { version = "0.12.23", features = ["blocking"]}
serde = "1.0.219"
smartstring = "1.0.1"
